Examen_Compialdores/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMA
    DOT
    ELSE
    FOR
    IF
    PRINT
    WHILE

Grammar

Rule 0     S' -> program
Rule 1     program -> object_declaration
Rule 2     object_declaration -> OBJECT ID LBRACE main_declaration RBRACE
Rule 3     main_declaration -> DEF MAIN LPAREN args LBRACE statements RBRACE
Rule 4     args -> ARGS COLON ARRAY LEFT_BRACKET STRING_TYPE RIGHT_BRACKET RPAREN COLON UNIT EQUALS
Rule 5     block -> LBRACE statements RBRACE
Rule 6     statements -> statement
Rule 7     statements -> statements statement
Rule 8     statement -> expression SEMICOLON
Rule 9     statement -> println_statement
Rule 10    statement -> assignment
Rule 11    println_statement -> PRINTLN LPAREN expression RPAREN SEMICOLON
Rule 12    println_statement -> PRINTLN LPAREN STRING_LITERAL RPAREN SEMICOLON
Rule 13    expression -> term
Rule 14    expression -> expression PLUS term
Rule 15    expression -> expression MINUS term
Rule 16    term -> factor
Rule 17    term -> term TIMES factor
Rule 18    term -> term DIVIDE factor
Rule 19    factor -> NUMBER
Rule 20    factor -> ID
Rule 21    factor -> LPAREN expression RPAREN
Rule 22    assignment -> ID EQUALS expression

Terminals, with rules where they appear

ARGS                 : 4
ARRAY                : 4
COLON                : 4 4
COMMA                : 
DEF                  : 3
DIVIDE               : 18
DOT                  : 
ELSE                 : 
EQUALS               : 4 22
FOR                  : 
ID                   : 2 20 22
IF                   : 
LBRACE               : 2 3 5
LEFT_BRACKET         : 4
LPAREN               : 3 11 12 21
MAIN                 : 3
MINUS                : 15
NUMBER               : 19
OBJECT               : 2
PLUS                 : 14
PRINT                : 
PRINTLN              : 11 12
RBRACE               : 2 3 5
RIGHT_BRACKET        : 4
RPAREN               : 4 11 12 21
SEMICOLON            : 8 11 12
STRING_LITERAL       : 12
STRING_TYPE          : 4
TIMES                : 17
UNIT                 : 4
WHILE                : 
error                : 

Nonterminals, with rules where they appear

args                 : 3
assignment           : 10
block                : 
expression           : 8 11 14 15 21 22
factor               : 16 17 18
main_declaration     : 2
object_declaration   : 1
println_statement    : 9
program              : 0
statement            : 6 7
statements           : 3 5 7
term                 : 13 14 15 17 18

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . object_declaration
    (2) object_declaration -> . OBJECT ID LBRACE main_declaration RBRACE

    OBJECT          shift and go to state 3

    program                        shift and go to state 1
    object_declaration             shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> object_declaration .

    $end            reduce using rule 1 (program -> object_declaration .)


state 3

    (2) object_declaration -> OBJECT . ID LBRACE main_declaration RBRACE

    ID              shift and go to state 4


state 4

    (2) object_declaration -> OBJECT ID . LBRACE main_declaration RBRACE

    LBRACE          shift and go to state 5


state 5

    (2) object_declaration -> OBJECT ID LBRACE . main_declaration RBRACE
    (3) main_declaration -> . DEF MAIN LPAREN args LBRACE statements RBRACE

    DEF             shift and go to state 7

    main_declaration               shift and go to state 6

state 6

    (2) object_declaration -> OBJECT ID LBRACE main_declaration . RBRACE

    RBRACE          shift and go to state 8


state 7

    (3) main_declaration -> DEF . MAIN LPAREN args LBRACE statements RBRACE

    MAIN            shift and go to state 9


state 8

    (2) object_declaration -> OBJECT ID LBRACE main_declaration RBRACE .

    $end            reduce using rule 2 (object_declaration -> OBJECT ID LBRACE main_declaration RBRACE .)


state 9

    (3) main_declaration -> DEF MAIN . LPAREN args LBRACE statements RBRACE

    LPAREN          shift and go to state 10


state 10

    (3) main_declaration -> DEF MAIN LPAREN . args LBRACE statements RBRACE
    (4) args -> . ARGS COLON ARRAY LEFT_BRACKET STRING_TYPE RIGHT_BRACKET RPAREN COLON UNIT EQUALS

    ARGS            shift and go to state 12

    args                           shift and go to state 11

state 11

    (3) main_declaration -> DEF MAIN LPAREN args . LBRACE statements RBRACE

    LBRACE          shift and go to state 13


state 12

    (4) args -> ARGS . COLON ARRAY LEFT_BRACKET STRING_TYPE RIGHT_BRACKET RPAREN COLON UNIT EQUALS

    COLON           shift and go to state 14


state 13

    (3) main_declaration -> DEF MAIN LPAREN args LBRACE . statements RBRACE
    (6) statements -> . statement
    (7) statements -> . statements statement
    (8) statement -> . expression SEMICOLON
    (9) statement -> . println_statement
    (10) statement -> . assignment
    (13) expression -> . term
    (14) expression -> . expression PLUS term
    (15) expression -> . expression MINUS term
    (11) println_statement -> . PRINTLN LPAREN expression RPAREN SEMICOLON
    (12) println_statement -> . PRINTLN LPAREN STRING_LITERAL RPAREN SEMICOLON
    (22) assignment -> . ID EQUALS expression
    (16) term -> . factor
    (17) term -> . term TIMES factor
    (18) term -> . term DIVIDE factor
    (19) factor -> . NUMBER
    (20) factor -> . ID
    (21) factor -> . LPAREN expression RPAREN

    PRINTLN         shift and go to state 22
    ID              shift and go to state 23
    NUMBER          shift and go to state 25
    LPAREN          shift and go to state 15

    statements                     shift and go to state 16
    statement                      shift and go to state 17
    expression                     shift and go to state 18
    println_statement              shift and go to state 19
    assignment                     shift and go to state 20
    term                           shift and go to state 21
    factor                         shift and go to state 24

state 14

    (4) args -> ARGS COLON . ARRAY LEFT_BRACKET STRING_TYPE RIGHT_BRACKET RPAREN COLON UNIT EQUALS

    ARRAY           shift and go to state 26


state 15

    (21) factor -> LPAREN . expression RPAREN
    (13) expression -> . term
    (14) expression -> . expression PLUS term
    (15) expression -> . expression MINUS term
    (16) term -> . factor
    (17) term -> . term TIMES factor
    (18) term -> . term DIVIDE factor
    (19) factor -> . NUMBER
    (20) factor -> . ID
    (21) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 25
    ID              shift and go to state 28
    LPAREN          shift and go to state 15

    expression                     shift and go to state 27
    term                           shift and go to state 21
    factor                         shift and go to state 24

state 16

    (3) main_declaration -> DEF MAIN LPAREN args LBRACE statements . RBRACE
    (7) statements -> statements . statement
    (8) statement -> . expression SEMICOLON
    (9) statement -> . println_statement
    (10) statement -> . assignment
    (13) expression -> . term
    (14) expression -> . expression PLUS term
    (15) expression -> . expression MINUS term
    (11) println_statement -> . PRINTLN LPAREN expression RPAREN SEMICOLON
    (12) println_statement -> . PRINTLN LPAREN STRING_LITERAL RPAREN SEMICOLON
    (22) assignment -> . ID EQUALS expression
    (16) term -> . factor
    (17) term -> . term TIMES factor
    (18) term -> . term DIVIDE factor
    (19) factor -> . NUMBER
    (20) factor -> . ID
    (21) factor -> . LPAREN expression RPAREN

    RBRACE          shift and go to state 29
    PRINTLN         shift and go to state 22
    ID              shift and go to state 23
    NUMBER          shift and go to state 25
    LPAREN          shift and go to state 15

    statement                      shift and go to state 30
    expression                     shift and go to state 18
    println_statement              shift and go to state 19
    assignment                     shift and go to state 20
    term                           shift and go to state 21
    factor                         shift and go to state 24

state 17

    (6) statements -> statement .

    RBRACE          reduce using rule 6 (statements -> statement .)
    PRINTLN         reduce using rule 6 (statements -> statement .)
    ID              reduce using rule 6 (statements -> statement .)
    NUMBER          reduce using rule 6 (statements -> statement .)
    LPAREN          reduce using rule 6 (statements -> statement .)


state 18

    (8) statement -> expression . SEMICOLON
    (14) expression -> expression . PLUS term
    (15) expression -> expression . MINUS term

    SEMICOLON       shift and go to state 31
    PLUS            shift and go to state 32
    MINUS           shift and go to state 33


state 19

    (9) statement -> println_statement .

    RBRACE          reduce using rule 9 (statement -> println_statement .)
    PRINTLN         reduce using rule 9 (statement -> println_statement .)
    ID              reduce using rule 9 (statement -> println_statement .)
    NUMBER          reduce using rule 9 (statement -> println_statement .)
    LPAREN          reduce using rule 9 (statement -> println_statement .)


state 20

    (10) statement -> assignment .

    RBRACE          reduce using rule 10 (statement -> assignment .)
    PRINTLN         reduce using rule 10 (statement -> assignment .)
    ID              reduce using rule 10 (statement -> assignment .)
    NUMBER          reduce using rule 10 (statement -> assignment .)
    LPAREN          reduce using rule 10 (statement -> assignment .)


state 21

    (13) expression -> term .
    (17) term -> term . TIMES factor
    (18) term -> term . DIVIDE factor

    SEMICOLON       reduce using rule 13 (expression -> term .)
    PLUS            reduce using rule 13 (expression -> term .)
    MINUS           reduce using rule 13 (expression -> term .)
    RPAREN          reduce using rule 13 (expression -> term .)
    RBRACE          reduce using rule 13 (expression -> term .)
    PRINTLN         reduce using rule 13 (expression -> term .)
    ID              reduce using rule 13 (expression -> term .)
    NUMBER          reduce using rule 13 (expression -> term .)
    LPAREN          reduce using rule 13 (expression -> term .)
    TIMES           shift and go to state 34
    DIVIDE          shift and go to state 35


state 22

    (11) println_statement -> PRINTLN . LPAREN expression RPAREN SEMICOLON
    (12) println_statement -> PRINTLN . LPAREN STRING_LITERAL RPAREN SEMICOLON

    LPAREN          shift and go to state 36


state 23

    (22) assignment -> ID . EQUALS expression
    (20) factor -> ID .

    EQUALS          shift and go to state 37
    TIMES           reduce using rule 20 (factor -> ID .)
    DIVIDE          reduce using rule 20 (factor -> ID .)
    SEMICOLON       reduce using rule 20 (factor -> ID .)
    PLUS            reduce using rule 20 (factor -> ID .)
    MINUS           reduce using rule 20 (factor -> ID .)


state 24

    (16) term -> factor .

    TIMES           reduce using rule 16 (term -> factor .)
    DIVIDE          reduce using rule 16 (term -> factor .)
    SEMICOLON       reduce using rule 16 (term -> factor .)
    PLUS            reduce using rule 16 (term -> factor .)
    MINUS           reduce using rule 16 (term -> factor .)
    RPAREN          reduce using rule 16 (term -> factor .)
    RBRACE          reduce using rule 16 (term -> factor .)
    PRINTLN         reduce using rule 16 (term -> factor .)
    ID              reduce using rule 16 (term -> factor .)
    NUMBER          reduce using rule 16 (term -> factor .)
    LPAREN          reduce using rule 16 (term -> factor .)


state 25

    (19) factor -> NUMBER .

    TIMES           reduce using rule 19 (factor -> NUMBER .)
    DIVIDE          reduce using rule 19 (factor -> NUMBER .)
    SEMICOLON       reduce using rule 19 (factor -> NUMBER .)
    PLUS            reduce using rule 19 (factor -> NUMBER .)
    MINUS           reduce using rule 19 (factor -> NUMBER .)
    RPAREN          reduce using rule 19 (factor -> NUMBER .)
    RBRACE          reduce using rule 19 (factor -> NUMBER .)
    PRINTLN         reduce using rule 19 (factor -> NUMBER .)
    ID              reduce using rule 19 (factor -> NUMBER .)
    NUMBER          reduce using rule 19 (factor -> NUMBER .)
    LPAREN          reduce using rule 19 (factor -> NUMBER .)


state 26

    (4) args -> ARGS COLON ARRAY . LEFT_BRACKET STRING_TYPE RIGHT_BRACKET RPAREN COLON UNIT EQUALS

    LEFT_BRACKET    shift and go to state 38


state 27

    (21) factor -> LPAREN expression . RPAREN
    (14) expression -> expression . PLUS term
    (15) expression -> expression . MINUS term

    RPAREN          shift and go to state 39
    PLUS            shift and go to state 32
    MINUS           shift and go to state 33


state 28

    (20) factor -> ID .

    TIMES           reduce using rule 20 (factor -> ID .)
    DIVIDE          reduce using rule 20 (factor -> ID .)
    RPAREN          reduce using rule 20 (factor -> ID .)
    PLUS            reduce using rule 20 (factor -> ID .)
    MINUS           reduce using rule 20 (factor -> ID .)
    SEMICOLON       reduce using rule 20 (factor -> ID .)
    RBRACE          reduce using rule 20 (factor -> ID .)
    PRINTLN         reduce using rule 20 (factor -> ID .)
    ID              reduce using rule 20 (factor -> ID .)
    NUMBER          reduce using rule 20 (factor -> ID .)
    LPAREN          reduce using rule 20 (factor -> ID .)


state 29

    (3) main_declaration -> DEF MAIN LPAREN args LBRACE statements RBRACE .

    RBRACE          reduce using rule 3 (main_declaration -> DEF MAIN LPAREN args LBRACE statements RBRACE .)


state 30

    (7) statements -> statements statement .

    RBRACE          reduce using rule 7 (statements -> statements statement .)
    PRINTLN         reduce using rule 7 (statements -> statements statement .)
    ID              reduce using rule 7 (statements -> statements statement .)
    NUMBER          reduce using rule 7 (statements -> statements statement .)
    LPAREN          reduce using rule 7 (statements -> statements statement .)


state 31

    (8) statement -> expression SEMICOLON .

    RBRACE          reduce using rule 8 (statement -> expression SEMICOLON .)
    PRINTLN         reduce using rule 8 (statement -> expression SEMICOLON .)
    ID              reduce using rule 8 (statement -> expression SEMICOLON .)
    NUMBER          reduce using rule 8 (statement -> expression SEMICOLON .)
    LPAREN          reduce using rule 8 (statement -> expression SEMICOLON .)


state 32

    (14) expression -> expression PLUS . term
    (16) term -> . factor
    (17) term -> . term TIMES factor
    (18) term -> . term DIVIDE factor
    (19) factor -> . NUMBER
    (20) factor -> . ID
    (21) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 25
    ID              shift and go to state 28
    LPAREN          shift and go to state 15

    term                           shift and go to state 40
    factor                         shift and go to state 24

state 33

    (15) expression -> expression MINUS . term
    (16) term -> . factor
    (17) term -> . term TIMES factor
    (18) term -> . term DIVIDE factor
    (19) factor -> . NUMBER
    (20) factor -> . ID
    (21) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 25
    ID              shift and go to state 28
    LPAREN          shift and go to state 15

    term                           shift and go to state 41
    factor                         shift and go to state 24

state 34

    (17) term -> term TIMES . factor
    (19) factor -> . NUMBER
    (20) factor -> . ID
    (21) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 25
    ID              shift and go to state 28
    LPAREN          shift and go to state 15

    factor                         shift and go to state 42

state 35

    (18) term -> term DIVIDE . factor
    (19) factor -> . NUMBER
    (20) factor -> . ID
    (21) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 25
    ID              shift and go to state 28
    LPAREN          shift and go to state 15

    factor                         shift and go to state 43

state 36

    (11) println_statement -> PRINTLN LPAREN . expression RPAREN SEMICOLON
    (12) println_statement -> PRINTLN LPAREN . STRING_LITERAL RPAREN SEMICOLON
    (13) expression -> . term
    (14) expression -> . expression PLUS term
    (15) expression -> . expression MINUS term
    (16) term -> . factor
    (17) term -> . term TIMES factor
    (18) term -> . term DIVIDE factor
    (19) factor -> . NUMBER
    (20) factor -> . ID
    (21) factor -> . LPAREN expression RPAREN

    STRING_LITERAL  shift and go to state 45
    NUMBER          shift and go to state 25
    ID              shift and go to state 28
    LPAREN          shift and go to state 15

    expression                     shift and go to state 44
    term                           shift and go to state 21
    factor                         shift and go to state 24

state 37

    (22) assignment -> ID EQUALS . expression
    (13) expression -> . term
    (14) expression -> . expression PLUS term
    (15) expression -> . expression MINUS term
    (16) term -> . factor
    (17) term -> . term TIMES factor
    (18) term -> . term DIVIDE factor
    (19) factor -> . NUMBER
    (20) factor -> . ID
    (21) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 25
    ID              shift and go to state 28
    LPAREN          shift and go to state 15

    expression                     shift and go to state 46
    term                           shift and go to state 21
    factor                         shift and go to state 24

state 38

    (4) args -> ARGS COLON ARRAY LEFT_BRACKET . STRING_TYPE RIGHT_BRACKET RPAREN COLON UNIT EQUALS

    STRING_TYPE     shift and go to state 47


state 39

    (21) factor -> LPAREN expression RPAREN .

    TIMES           reduce using rule 21 (factor -> LPAREN expression RPAREN .)
    DIVIDE          reduce using rule 21 (factor -> LPAREN expression RPAREN .)
    SEMICOLON       reduce using rule 21 (factor -> LPAREN expression RPAREN .)
    PLUS            reduce using rule 21 (factor -> LPAREN expression RPAREN .)
    MINUS           reduce using rule 21 (factor -> LPAREN expression RPAREN .)
    RPAREN          reduce using rule 21 (factor -> LPAREN expression RPAREN .)
    RBRACE          reduce using rule 21 (factor -> LPAREN expression RPAREN .)
    PRINTLN         reduce using rule 21 (factor -> LPAREN expression RPAREN .)
    ID              reduce using rule 21 (factor -> LPAREN expression RPAREN .)
    NUMBER          reduce using rule 21 (factor -> LPAREN expression RPAREN .)
    LPAREN          reduce using rule 21 (factor -> LPAREN expression RPAREN .)


state 40

    (14) expression -> expression PLUS term .
    (17) term -> term . TIMES factor
    (18) term -> term . DIVIDE factor

    SEMICOLON       reduce using rule 14 (expression -> expression PLUS term .)
    PLUS            reduce using rule 14 (expression -> expression PLUS term .)
    MINUS           reduce using rule 14 (expression -> expression PLUS term .)
    RPAREN          reduce using rule 14 (expression -> expression PLUS term .)
    RBRACE          reduce using rule 14 (expression -> expression PLUS term .)
    PRINTLN         reduce using rule 14 (expression -> expression PLUS term .)
    ID              reduce using rule 14 (expression -> expression PLUS term .)
    NUMBER          reduce using rule 14 (expression -> expression PLUS term .)
    LPAREN          reduce using rule 14 (expression -> expression PLUS term .)
    TIMES           shift and go to state 34
    DIVIDE          shift and go to state 35


state 41

    (15) expression -> expression MINUS term .
    (17) term -> term . TIMES factor
    (18) term -> term . DIVIDE factor

    SEMICOLON       reduce using rule 15 (expression -> expression MINUS term .)
    PLUS            reduce using rule 15 (expression -> expression MINUS term .)
    MINUS           reduce using rule 15 (expression -> expression MINUS term .)
    RPAREN          reduce using rule 15 (expression -> expression MINUS term .)
    RBRACE          reduce using rule 15 (expression -> expression MINUS term .)
    PRINTLN         reduce using rule 15 (expression -> expression MINUS term .)
    ID              reduce using rule 15 (expression -> expression MINUS term .)
    NUMBER          reduce using rule 15 (expression -> expression MINUS term .)
    LPAREN          reduce using rule 15 (expression -> expression MINUS term .)
    TIMES           shift and go to state 34
    DIVIDE          shift and go to state 35


state 42

    (17) term -> term TIMES factor .

    TIMES           reduce using rule 17 (term -> term TIMES factor .)
    DIVIDE          reduce using rule 17 (term -> term TIMES factor .)
    SEMICOLON       reduce using rule 17 (term -> term TIMES factor .)
    PLUS            reduce using rule 17 (term -> term TIMES factor .)
    MINUS           reduce using rule 17 (term -> term TIMES factor .)
    RPAREN          reduce using rule 17 (term -> term TIMES factor .)
    RBRACE          reduce using rule 17 (term -> term TIMES factor .)
    PRINTLN         reduce using rule 17 (term -> term TIMES factor .)
    ID              reduce using rule 17 (term -> term TIMES factor .)
    NUMBER          reduce using rule 17 (term -> term TIMES factor .)
    LPAREN          reduce using rule 17 (term -> term TIMES factor .)


state 43

    (18) term -> term DIVIDE factor .

    TIMES           reduce using rule 18 (term -> term DIVIDE factor .)
    DIVIDE          reduce using rule 18 (term -> term DIVIDE factor .)
    SEMICOLON       reduce using rule 18 (term -> term DIVIDE factor .)
    PLUS            reduce using rule 18 (term -> term DIVIDE factor .)
    MINUS           reduce using rule 18 (term -> term DIVIDE factor .)
    RPAREN          reduce using rule 18 (term -> term DIVIDE factor .)
    RBRACE          reduce using rule 18 (term -> term DIVIDE factor .)
    PRINTLN         reduce using rule 18 (term -> term DIVIDE factor .)
    ID              reduce using rule 18 (term -> term DIVIDE factor .)
    NUMBER          reduce using rule 18 (term -> term DIVIDE factor .)
    LPAREN          reduce using rule 18 (term -> term DIVIDE factor .)


state 44

    (11) println_statement -> PRINTLN LPAREN expression . RPAREN SEMICOLON
    (14) expression -> expression . PLUS term
    (15) expression -> expression . MINUS term

    RPAREN          shift and go to state 48
    PLUS            shift and go to state 32
    MINUS           shift and go to state 33


state 45

    (12) println_statement -> PRINTLN LPAREN STRING_LITERAL . RPAREN SEMICOLON

    RPAREN          shift and go to state 49


state 46

    (22) assignment -> ID EQUALS expression .
    (14) expression -> expression . PLUS term
    (15) expression -> expression . MINUS term

    RBRACE          reduce using rule 22 (assignment -> ID EQUALS expression .)
    PRINTLN         reduce using rule 22 (assignment -> ID EQUALS expression .)
    ID              reduce using rule 22 (assignment -> ID EQUALS expression .)
    NUMBER          reduce using rule 22 (assignment -> ID EQUALS expression .)
    LPAREN          reduce using rule 22 (assignment -> ID EQUALS expression .)
    PLUS            shift and go to state 32
    MINUS           shift and go to state 33


state 47

    (4) args -> ARGS COLON ARRAY LEFT_BRACKET STRING_TYPE . RIGHT_BRACKET RPAREN COLON UNIT EQUALS

    RIGHT_BRACKET   shift and go to state 50


state 48

    (11) println_statement -> PRINTLN LPAREN expression RPAREN . SEMICOLON

    SEMICOLON       shift and go to state 51


state 49

    (12) println_statement -> PRINTLN LPAREN STRING_LITERAL RPAREN . SEMICOLON

    SEMICOLON       shift and go to state 52


state 50

    (4) args -> ARGS COLON ARRAY LEFT_BRACKET STRING_TYPE RIGHT_BRACKET . RPAREN COLON UNIT EQUALS

    RPAREN          shift and go to state 53


state 51

    (11) println_statement -> PRINTLN LPAREN expression RPAREN SEMICOLON .

    RBRACE          reduce using rule 11 (println_statement -> PRINTLN LPAREN expression RPAREN SEMICOLON .)
    PRINTLN         reduce using rule 11 (println_statement -> PRINTLN LPAREN expression RPAREN SEMICOLON .)
    ID              reduce using rule 11 (println_statement -> PRINTLN LPAREN expression RPAREN SEMICOLON .)
    NUMBER          reduce using rule 11 (println_statement -> PRINTLN LPAREN expression RPAREN SEMICOLON .)
    LPAREN          reduce using rule 11 (println_statement -> PRINTLN LPAREN expression RPAREN SEMICOLON .)


state 52

    (12) println_statement -> PRINTLN LPAREN STRING_LITERAL RPAREN SEMICOLON .

    RBRACE          reduce using rule 12 (println_statement -> PRINTLN LPAREN STRING_LITERAL RPAREN SEMICOLON .)
    PRINTLN         reduce using rule 12 (println_statement -> PRINTLN LPAREN STRING_LITERAL RPAREN SEMICOLON .)
    ID              reduce using rule 12 (println_statement -> PRINTLN LPAREN STRING_LITERAL RPAREN SEMICOLON .)
    NUMBER          reduce using rule 12 (println_statement -> PRINTLN LPAREN STRING_LITERAL RPAREN SEMICOLON .)
    LPAREN          reduce using rule 12 (println_statement -> PRINTLN LPAREN STRING_LITERAL RPAREN SEMICOLON .)


state 53

    (4) args -> ARGS COLON ARRAY LEFT_BRACKET STRING_TYPE RIGHT_BRACKET RPAREN . COLON UNIT EQUALS

    COLON           shift and go to state 54


state 54

    (4) args -> ARGS COLON ARRAY LEFT_BRACKET STRING_TYPE RIGHT_BRACKET RPAREN COLON . UNIT EQUALS

    UNIT            shift and go to state 55


state 55

    (4) args -> ARGS COLON ARRAY LEFT_BRACKET STRING_TYPE RIGHT_BRACKET RPAREN COLON UNIT . EQUALS

    EQUALS          shift and go to state 56


state 56

    (4) args -> ARGS COLON ARRAY LEFT_BRACKET STRING_TYPE RIGHT_BRACKET RPAREN COLON UNIT EQUALS .

    LBRACE          reduce using rule 4 (args -> ARGS COLON ARRAY LEFT_BRACKET STRING_TYPE RIGHT_BRACKET RPAREN COLON UNIT EQUALS .)

